# halluguard

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  PROGRESS.md  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
benchmarks/: ragtruth_eval.py  results_ragtruth_ft300_v1.json  results_ragtruth_q_v1.json  results_ragtruth_vote_v1.json  synthetic_eval.py  timing_bench.py
examples/: README.md  daemon_mode.py  quickstart.py  streaming.py
halluguard/: __init__.py  cli.py  daemon.py  guard.py  report.py  retriever.py  segment.py  verifier.py
tests/: test_cli.py  test_daemon.py  test_daemon_e2e.py  test_guard.py  test_retriever.py  test_segment.py  test_verifier.py
