[project]
name = "halluguard"
version = "0.3.1"
description = "Reverse-RAG hallucination detector. No LLM judge. Vendor-neutral."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "atakan" }]
keywords = ["llm", "hallucination", "rag", "retrieval", "safety", "evaluation"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
  "numpy>=1.24",
  "sentence-transformers>=3.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.5", "requests>=2.32"]
bench = ["datasets>=3.0"]
daemon = ["requests>=2.32"]

[project.scripts]
halluguard = "halluguard.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["halluguard*"]

[tool.setuptools.package-data]
halluguard = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
